<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Database</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="id_string">Product ID</string>
    <string name="product_string">Product Name</string>
    <string name="quantity_string">Product Quantity</string>
    <string name="add_string">Add</string>
    <string name="find_string">Find</string>
    <string name="delete_string">Delete</string>

</resources>
